fixed wrappings of contents and URI box

--- a/BetMas/resources/css/w3local.css
+++ b/BetMas/resources/css/w3local.css
@@ -167,3 +167,14 @@ div#SeeAlsoResults {
     overflow-y:auto;
 }
 
+.contentItem {
+    white-space: normal;
+    text-align: left;
+    overflow: scroll
+}
+
+div.msItem {
+    padding-left: 15px;
+    padding-top: 10px;
+}
+
